<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Star Wars RPG:SE Character Sheet</string>
    <string name="class_prompt">Select Class</string>
    <string name="species_prompt">Select Species</string>
    <string name="destiny_prompt">Select Destiny</string>
    <string name="skills_prompt">Select Skills</string>
    <string name="feats_prompt">Select Feats</string>
    <string name="talents_prompt">Select Talents</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="player">Player: </string>
    <string name="name">Name: </string>
    <string name="char_class">Class: </string>
    <string name="species">Species: </string>
    <string name="hp">HP: </string>
    <string name="gender">Gender: </string>
    <string name="destiny">Destiny: </string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="abil_int">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prompt_spendFP">Definitely spend Force Point?</string>
    <string name="zero">0</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="adj_Health">Adjust Health Points by: </string>
    <string name="adj_Exp">Adjust Experience Points by: </string>
    <string name="load_char">Load Char</string>
    <string name="new_char">New Char</string>
    <string name="coverDesc">Gold image of Darth Vader\'s helmet</string>
    <string name="hintChar">Character\'s Name</string>
    <string name="hintPlayer">Player\'s Name</string>
    <string name="newCharCreation">New Character Creation</string>
    <string name="enterScores">Enter Ability Scores</string>
    <string name="skills">Skills:</string>
    <string name="feats">Feats:</string>
    <string name="talents">Talents:</string>
    <string name="next">Next</string>
    <string name="level">Level:</string>
    <string-array name="starting_class_array">
        <item>Jedi</item>
        <item>Noble</item>
        <item>Scoundrel</item>
        <item>Scout</item>
        <item>Soldier</item>
    </string-array>
    <string-array name="species_array">
        <item>Bothan</item>
        <item>Cerean</item>
        <item>Duros</item>
        <item>Ewok</item>
        <item>Gamorrean</item>
        <item>Gungan</item>
        <item>Human</item>
        <item>Ithorian</item>
        <item>Kel Dor</item>
        <item>Mon Calamari</item>
        <item>Quarren</item>
        <item>Rodian</item>
        <item>Sullustan</item>
        <item>Trandoshan</item>
        <item>Twi\'lek</item>
        <item>Wookiee</item>
        <item>Zabrak</item>
    </string-array>
    <string-array name="destiny_array">
        <item>None</item>
        <item>Corruption</item>
        <item>Destruction</item>
        <item>Discovery</item>
        <item>Education</item>
        <item>Redemption</item>
        <item>Rescue</item>
    </string-array>
</resources>