<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ImageView android:contentDescription="@string/coverDesc"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:background="@drawable/swrpgcover"/>
    <LinearLayout 
 	    android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal">
    	<Button
       		android:id="@+id/newCharButton"
      		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="10dp"
		android:text="@string/new_char"/>
        <Button
       		android:id="@+id/loadCharButton"
      		android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="10dp"
		android:text="@string/load_char"/>
    </LinearLayout>
</LinearLayout>
