<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/adjXPDialog"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">
    <TextView android:text="@string/adj_Exp"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:gravity="center_horizontal"/>
    <TableLayout
    	android:layout_width="200dip"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal">
    	<TableRow>
    		<Button android:id="@+id/incXP1000"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/plus"/>
    		<Button android:id="@+id/incXP0100"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/plus"/>
    		<Button android:id="@+id/incXP0010"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/plus"/>
    		<Button android:id="@+id/incXP0001"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/plus"/>
    	</TableRow>
    	<TableRow>
    		<TextView android:id="@+id/adjXPText1000"
    			android:text="@string/zero"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp" 
    			android:textSize="10pt"
    			android:layout_gravity="center_horizontal"/>
    		<TextView android:id="@+id/adjXPText0100"
    			android:text="@string/zero"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"  
    			android:textSize="10pt"
    			android:layout_gravity="center_horizontal"/>
    		<TextView android:id="@+id/adjXPText0010"
    			android:text="@string/zero"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"  
    			android:textSize="10pt"
    			android:layout_gravity="center_horizontal"/>
    		<TextView android:id="@+id/adjXPText0001"
    			android:text="@string/zero"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"  
    			android:textSize="10pt"
    			android:layout_gravity="center_horizontal"/>
    	</TableRow>
    	<TableRow>
    		<Button android:id="@+id/decXP1000"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/minus"/>
    		<Button android:id="@+id/decXP0100"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/minus"/>
    		<Button android:id="@+id/decXP0010"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/minus"/>
    		<Button android:id="@+id/decXP0001"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/minus"/>
    	</TableRow>
    </TableLayout>
    <View android:layout_width="fill_parent"
    	android:layout_height="10dip"/>
    <LinearLayout android:orientation="horizontal"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:gravity="center_horizontal">
		    <Button android:id="@+id/adjXPOK"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/ok"/>
		    <Button android:id="@+id/adjXPCANCEL"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>