<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/adjHPDialog"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">
    <TextView android:text="@string/adj_Health"
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:gravity="center_horizontal"/>
    <TableLayout
    	android:layout_width="200dip"
    	android:layout_height="wrap_content"
    	android:gravity="center_horizontal">
    	<TableRow>
    		<Button android:id="@+id/incHP1000"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/plus"/>
    		<Button android:id="@+id/incHP0100"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/plus"/>
    		<Button android:id="@+id/incHP0010"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/plus"/>
    		<Button android:id="@+id/incHP0001"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/plus"/>
    	</TableRow>
    	<TableRow>
    		<TextView android:id="@+id/adjHPText1000"
    			android:text="@string/zero"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp" 
    			android:textSize="10pt"
    			android:layout_gravity="center_horizontal"/>
    		<TextView android:id="@+id/adjHPText0100"
    			android:text="@string/zero"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"  
    			android:textSize="10pt"
    			android:layout_gravity="center_horizontal"/>
    		<TextView android:id="@+id/adjHPText0010"
    			android:text="@string/zero"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"  
    			android:textSize="10pt"
    			android:layout_gravity="center_horizontal"/>
    		<TextView android:id="@+id/adjHPText0001"
    			android:text="@string/zero"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"  
    			android:textSize="10pt"
    			android:layout_gravity="center_horizontal"/>
    	</TableRow>
    	<TableRow>
    		<Button android:id="@+id/decHP1000"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/minus"/>
    		<Button android:id="@+id/decHP0100"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/minus"/>
    		<Button android:id="@+id/decHP0010"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/minus"/>
    		<Button android:id="@+id/decHP0001"
    			android:layout_height="wrap_content"
    			android:layout_width="50dp"
    			android:text="@string/minus"/>
    	</TableRow>
    </TableLayout>
    <View android:layout_width="fill_parent"
    	android:layout_height="10dip"/>
    <LinearLayout android:orientation="horizontal"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:gravity="center_horizontal">
		    <Button android:id="@+id/adjHPOK"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/ok"/>
		    <Button android:id="@+id/adjHPCANCEL"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>