<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<TextView android:text="Name: "
    		android:layout_height="fill_parent"
    		android:layout_width="wrap_content"/>
    	<EditText android:id="@+id/charName"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"/>
	</LinearLayout>
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"> 		
    	<TextView android:text="Player Name: "
    		android:layout_height="fill_parent"
    		android:layout_width="wrap_content"/>
    	<EditText android:id="@+id/playerName"
    		android:layout_height="wrap_content"
    		android:layout_width="fill_parent"/>
    </LinearLayout>
	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"> 		
    	<TextView android:text="Class: "
    		android:layout_height="fill_parent"
    		android:layout_width="wrap_content"/>
    	<Spinner android:id="@+id/className"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:prompt="@string/class_prompt"/>
    	<TextView android:text="Species: "
    		android:layout_height="fill_parent"
    		android:layout_width="wrap_content"/>
    	<Spinner android:id="@+id/species"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:prompt="@string/species_prompt"/>
 <!-- TODO:make class a spinner -->
	</LinearLayout>
	<LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
    	<TextView android:text="Age:"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"/>
    	<EditText android:id="@+id/charAge"
    		android:layout_width="50dp"
    		android:layout_height="wrap_content"/>
    	<TextView android:text="Gender:"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"/>
    	<EditText android:id="@+id/charGen"
    		android:layout_width="50dp"
    		android:layout_height="wrap_content"/>
    	<TextView android:text="Destiny:"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"/>
    	<Spinner android:id="@+id/destiny"
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:prompt="@string/destiny_prompt"/>
   	</LinearLayout>
</LinearLayout>
